src/objects/CventEvents__FieldsMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the Cvent - SF fields mapping configuration.</description>
    <fields>
        <fullName>CventEvents__CventField__c</fullName>
        <description>Attendee Temp field API name used for mapping.</description>
        <inlineHelpText>Attendee Temp field API name used for mapping.</inlineHelpText>
        <label>Cvent Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__CventObject__c</fullName>
        <description>Stores mnemonic Cvent object name (either &apos;EVENT&apos;, &apos;SESSION&apos;, &apos;CONTACT&apos;, &apos;ATTENDEE&apos; or &apos;RESPONDENT&apos;).</description>
        <label>Cvent Object</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__DefaultValue__c</fullName>
        <description>Value which is filled in the target field in case the source field value is empty.</description>
        <inlineHelpText>Value which is filled in the target field in case the source field value is empty.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this mapping is required.</description>
        <inlineHelpText>Indicates whether this mapping is required.</inlineHelpText>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__Object__c</fullName>
        <description>Salesforce target object name used for mapping.</description>
        <inlineHelpText>Salesforce target object name used for mapping.</inlineHelpText>
        <label>Object</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SalesforceField__c</fullName>
        <description>Contact/Lead/Campaign Member field API name used for mapping.</description>
        <inlineHelpText>Contact/Lead field API name used for mapping.</inlineHelpText>
        <label>Salesforce Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Fields Mapping</label>
</CustomObject>